@@ -1,3 +1,7 @@
+2003-07-09  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* doc/gramps-manual/C/gramps-manual.xml: Straighten up versioning.
+	* doc/gramps-manual/C/gramps-manual-C.omf: Update version and date.
+
 2003-07-08  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/SelectChild.py: Fix typos upsetting translation. 
 	* src/plugins/book.glade: Mark dummy strins as non-translatable.
